helm/ecommerce/network-policies/allow-access-to-core-services.yaml
# cloud-config
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-to-cloud-config
  namespace: ecommerce-dev
spec:
  podSelector:
    matchLabels:
      app: cloud-config
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}

---

# service-discovery
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-to-service-discovery
  namespace: ecommerce-dev
spec:
  podSelector:
    matchLabels:
      app: service-discovery
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}

---

# zipkin
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-access-to-zipkin
  namespace: ecommerce-dev
spec:
  podSelector:
    matchLabels:
      app: zipkin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
