helm/ecommerce/network-policies/allow-all-to-service-discovery.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-to-service-discovery
  namespace: ecommerce-develop
spec:
  podSelector:
    matchLabels:
      app: service-discovery
  ingress:
  - from:
    - podSelector: {}  # Permitir a todos los pods del namespace
