helm/ecommerce/network-policies/api-gateway-to-proxy-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-to-proxy-client
  namespace: ecommerce-dev
spec:
  podSelector:
    matchLabels:
      app: proxy-client
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
